# kyro

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
bot/: __init__.py  bot.py  config.py  db.py  logging_config.py
bot/cogs/: ping.py
bot/cogs/mods/: cmds.py
bot/cogs/user/: afk.py  cmds.py  confession.py
bot/services/: mod_logging.py  time.py
cogs/: test.py
