[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "kyro"
version = "0.1.0"
description = "Discord bot written in python"
requires-python = ">=3.11"

dependencies = [
    "discord.py>=2.6.4",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.2.1",
    "aiosqlite>=0.22.1"
]
